@startuml lories.connectors.connector.Connector
set namespaceSeparator none
class "Connector" as lories.connectors.connector.Connector {
  channels: Channels
  resources: Resources
  is_connected() -> bool
  {abstract}connect(resources: Resources) -> None
  {abstract}disconnect() -> None
  {abstract}read(resources: Resources, start: Optional[pd.Timestamp], end: Optional[pd.Timestamp]) -> pd.DataFrame
  {abstract}write(data: pd.DataFrame) -> None
  set_channels(state: ChannelState) -> None
}
class "Registrator" as lories.core.register.registrator.Registrator {
  TYPE: str
  SECTION: str
  SECTIONS: Collection[str]
  context: RegistratorContext
  id: str
  key: str
}
class "Configurator" as lories.core.configs.configurator.Configurator {
  context: Context
  configs: Configurations
  {abstract}configure(configs: Configurations) -> None
  is_configured() -> bool
  is_enabled() -> bool
}
class "ConnectorContext" as lories.connectors.context.ConnectorContext {
  SECTION: str
  filter(filter: Callable[[Connector], bool]) -> Collection[Connector]
  get_all() -> Collection[Connector]
  get_first() -> Optional[Connector]
  get_last() -> Optional[Connector]
  get_types() -> Collection[str]
  has_type() -> bool
}
class "Resources" as lories.core.resources.Resources {
  copy() -> Resources
  append(resource: Resource)
  extend(resources: Iterable[Resource])
  apply(apply: Callable[[Resource], None]) -> None
  filter(filter: Callable[[Resource], bool]) -> Resources
  groupby(by: str) -> Iterator[Tuple[Any, Collection[R]]]
}
class "Resource" as lories.core.resource.Resource {
  id
  key
  name
  type
  copy() -> Resource
  get(attr: str, default: Optional[Any]) -> Any
}
lories.core.register.registrator.Registrator --|> lories.core.configs.configurator.Configurator
lories.connectors.connector.Connector --|> lories.core.register.registrator.Registrator
lories.connectors.connector.Connector *-- lories.core.resources.Resources : __resources
lories.connectors.connector.Connector *-- lories.connectors.context.ConnectorContext : __context
lories.connectors.context.ConnectorContext --|> lories.core.configs.configurator.Configurator
lories.core.resource.Resource - lories.core.resources.Resources : 0..*
@enduml
